055 changelog reconstructed from main